refactor: change env example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-DB_USER
-DB_PASS
-DB_NAME
-DB_HOST
-DB_PORT
+# DATABASE
+DB_USER=  # Database user
+DB_PASS=  # if you have a password
+DB_NAME=  # database name
+DB_HOST=  # host name from service database by docker-compose
+DB_PORT=  # default port for postgres is 5432
+DB_PORTS= # port exposed by docker container
 
 # JWT
-JWT_PUBLIC_KEY=./jwt.public.key
-JWT_PRIVATE_KEY=./jwt.private.key
+JWT_PUBLIC_KEY='./jwt.public.key' # path to public key
+JWT_PRIVATE_KEY='./jwt.private.key' # path to private key
+
+# ENVIRONMENT
+GO_ENV='development' # development, production, staging
+PORT='8080' # port to run the server on
