feat: add refresh token and expiresin

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,15 +9,15 @@ services:
     environment:
       - GO_ENV=${GO_ENV}
       - PORT=${PORT}
-      - POSTGRES_USER=${DB_USER}
-      - POSTGRES_PASSWORD=${DB_PASS}
-      - POSTGRES_DB=${DB_NAME}
-      - DATABASE_HOST=${DB_HOST}
-      - DATABASE_PORT=${DB_PORT}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DB_NAME=${DB_NAME}
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
       - JWT_PUBLIC_KEY=${JWT_PUBLIC_KEY}
       - JWT_PRIVATE_KEY=${JWT_PRIVATE_KEY}
     ports:
-      - 8080:8080
+      - 8000:8080
     volumes:
       - api:/app
     depends_on:
@@ -25,7 +25,7 @@ services:
     networks:
       - app_backend
   postgres-db:
-    image: postgres:latest
+    image: postgres:15-alpine
     container_name: db_postgres
     env_file:
       - .env
@@ -33,7 +33,7 @@ services:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASS}
       - POSTGRES_DB=${DB_NAME}
-      - DATABASE_HOST=${DB_HOST}
+      - DB_HOST=${DB_HOST}
     ports:
       - ${DB_PORTS}:${DB_PORT}
     volumes:
