docs: add s3 env

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ JWT_PRIVATE_KEY='./jwt.private.key' # path to private key
 # ENVIRONMENT
 GO_ENV='development' # development, production, staging
 PORT='8080' # port to run the server on
+
+# S3 BUCKET
+S3_URL= # url to s3 bucket
+S3_BUCKET= # bucket name
+S3_ACCESS_KEY= # access key
+S3_SECRET_ACCESS_KEY= # secret access key
